fixed for CHLK-3341 Teacher. Final Grades. When a teacher puts an alpha grade and presses 'Enter', dropdown won't be hidden

--- a/Chalkable.Web/assets/jade/activities/grading/GradingPeriodFinalGrade.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/GradingPeriodFinalGrade.jade
@@ -26,7 +26,8 @@ div(class = (self.isAvgChanged() ? "opened slided" : "")).gp-data
         else
             isAbleDisplayAlphaGrades = true
             +ListView(items)(
-                selectedIndex = selectedIndex
+                selectedIndex = selectedIndex,
+                scrollToElementTimeout = 550
             ).grades-individual.people-list.final-grid
                 each item, i in items
                     +RenderWith(item, chlk.templates.grading.FinalGradeStudentBlockTpl)(
