--- a/Chalkable.Web/assets/sass/partials/controls/_avatar.scss
+++ b/Chalkable.Web/assets/sass/partials/controls/_avatar.scss
@@ -127,6 +127,7 @@
       border-right: 15px solid rgba(255,255,255,0.9);
       display: inline-block;
       vertical-align: middle;
+      position: relative;
     }
   }
 
