fixed  CHLK-3159 Teacher can't delete standards from an item, if any student has "late"

--- a/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
+++ b/Chalkable.Web/assets/jade/activities/announcement/BaseAnnouncementForm.jade
@@ -52,7 +52,7 @@ mixin BaseAnnouncementFormContainer(announcement, classId, adminRecipientId, adm
                             each standard in standards
                                 div(data-tooltip = standard.getDescription()).grey-button.same-on-hover
                                     span=standard.getName()
-                                    if !disableDeleteBtn
+                                    if announcement.isAbleToRemoveStandard()
                                         +ActionLink('announcement', 'removeStandard', announcement.getId(), standard.getStandardId()).remove-standard
                         if !isAdminAnnouncement && announcement.isCanAddStandard()
                             .title=Msg.Click_to_add_standard
