fixed for CHLK-3211 Teacher. Attendance. All. Hover over graph and you will see tooltips have wrong placed

--- a/Chalkable.Web/assets/jade/activities/attendance/SummaryPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/SummaryPage.jade
@@ -16,7 +16,8 @@ mixin AbsentLatePage(data, header)
         .chart-block.relative
             .wide-chart-bg
                 +Chart()(
-                    data-options=self.getChartOptions(data)
+                    data-options=self.getChartOptions(data),
+                    data-tooltip-padding=28
                 ).main-chart
     .students-container.relative
         items = self.getGroupedStudents(data.getStudents())
