--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekCalendarBody.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/WeekCalendarBody.jade
@@ -4,6 +4,7 @@ mixin TooltipWithOverflow(text)
     p(attributes)=text
 
 .week-calendar-body
+    -selectedItem = self.getTopData() ? self.getTopData().getSelectedItemId() : ''
     .day-names
         each item,i in self.getItems()
             div(class=item.getTodayClassName()).week
@@ -14,13 +15,13 @@ mixin TooltipWithOverflow(text)
             div
                 anns = item.getAnnouncements();
                 if anns && anns.length
-                    +ActionLink('calendar', 'showWeekBarPopUp', item.getDate().format('mm-dd-yy'), null, self.getTopData().getSelectedItemId() || '')(class = self.isMainCalendar() ? '' : 'disabled').bar-item
+                    +ActionLink('calendar', 'showWeekBarPopUp', item.getDate().toStandardFormat(), null, selectedItem)(class = self.isMainCalendar() ? '' : 'disabled').bar-item
     .items
         each item in self.getItems()
             div(class = item.getTodayClassName(), data-day = item.getDay()).gradient-cnt.item.week-day.week
                 ul
                     each announcementPeriod,i in item.getAnnouncementPeriods()
-                        +ActionLink('calendar', 'showWeekBarPopUp', item.getDate().format('mm-dd-yy'), i, self.getTopData().getSelectedItemId() || '')(class = self.isMainCalendar() ? '' : 'disabled').period-item
+                        +ActionLink('calendar', 'showWeekBarPopUp', item.getDate().toStandardFormat(), i, selectedItem)(class = self.isMainCalendar() ? '' : 'disabled').period-item
                             if item.getDate().format('DD') == Msg.Sunday
                                 .period-info=i+1
                             else
