--- a/Chalkable.Web/assets/jade/activities/profile/SchedulingPage.jade
+++ b/Chalkable.Web/assets/jade/activities/profile/SchedulingPage.jade
@@ -1,10 +1,16 @@
 schedule = self.getUser()
-.loader-container
-    .loader
-    +UserProfileTopBar(self, 'schedule')
-    actions = {currentAction: 'daySchedule'}
-    if self.getControllerName() == 'students'
-        -actions.day= 'daySchedule';
-        -actions.week= 'weekSchedule';
-        -actions.month= 'monthSchedule';
-    +Calendar(self, chlk.templates.calendar.announcement.DayCalendarBodyTpl, self.calendar, self.getControllerName(), actions, [schedule.getId()])
+.profile-calendar.scheduling-view
+    .loader-container
+        .loader
+        +UserProfileTopBar(self, 'schedule')
+        .profile-info.scheduling-view
+            .summary-info
+                +ShortPersonInfoSection(schedule, 64)
+                    label= 'Currently enrolled in ' + schedule.getClassesNumber() + ' classes'
+        actions = {currentAction: 'daySchedule'}
+        if self.getControllerName() == 'students'
+            -actions.day= 'daySchedule';
+            -actions.week= 'weekSchedule';
+            -actions.month= 'monthSchedule';
+        .calendar-section
+            +Calendar(self, chlk.templates.calendar.announcement.DayCalendarBodyTpl, self.calendar, self.getControllerName(), actions, [schedule.getId()])
