--- a/Chalkable.Web/assets/sass/partials/main/profile/_profile_calendar.scss
+++ b/Chalkable.Web/assets/sass/partials/main/profile/_profile_calendar.scss
@@ -53,7 +53,28 @@ BODY {
               }
             }
 
-            &.student-discipline-view{
+
+            &.scheduling-view{
+              .profile-info{
+                .person-info{
+                  .avarar-container{
+                    padding: 12px;
+                  }
+                  .profile-person-name{
+                    margin: 10px;
+                  }
+                  label{
+                    display: block;
+                    font-size: 18px !important;
+                    position: relative;
+                    left: 106px;
+                    top: -42px;
+                  }
+                }
+              }
+            }
+
+            &.student-discipline-view,.scheduling-view{
               .profile-info{
                 .person-info{
                   label{
