fixes for CHLK-3366 Grades: Class> Sorting item columns

--- a/Chalkable.Web/assets/jade/activities/grading/ShortGradingClassStandardsGridItems.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/ShortGradingClassStandardsGridItems.jade
@@ -3,7 +3,7 @@
         .no-items-text=Msg.No_grades_yet
     else
         .dotted-container.name-container.with-horizontal-dots
-            .type-name=Msg.Student(true)
+            .type-name(data-sort-type="name", data-sort-order="asc")=Msg.Student(true)
             each student,i in self.getStudents()
                 name = student.getStudentInfo().getDisplayName()
                 div(row-index=i).student-name
@@ -16,8 +16,9 @@
             padding = 77
         ).grid-toolbar.i-b.big-arrows
             each gradingItem in self.getGradingItemsOrdered()
+                -var stId = gradingItem.getStandard().getStandardId().valueOf()
                 .dotted-container.grade-container.with-horizontal-dots
-                    div(data-tooltip=gradingItem.getTooltip()).type-name=gradingItem.getTitle()
+                    .type-name(data-tooltip=gradingItem.getTooltip(), data-sort-type="standard", data-sort-id = stId)= gradingItem.getTitle()
                     each info,i in gradingItem.getItems()
                         div(
                             row-index=i,
