--- a/Chalkable.Web/assets/sass2/_shared.sass
+++ b/Chalkable.Web/assets/sass2/_shared.sass
@@ -21,6 +21,7 @@
 @import "2_atoms/close-btn"
 @import "2_atoms/search-input"
 @import "2_atoms/combo-box"
+@import "2_atoms/validation"
 
 @import "3_molecules/layout"
 @import "3_molecules/header"
