--- a/Chalkable.Web/assets/sass2/2_atoms/_validation.sass
+++ b/Chalkable.Web/assets/sass2/2_atoms/_validation.sass
@@ -1,21 +1,24 @@
 .formError
   font-size: 14px
-  background: rgba(0,0,0,0.7)
   position: absolute
-  color: white
   word-wrap: break-word
-  border: 1px solid black
+  color: red
   padding: 9px 12px 14px 14px
-  font-weight: bold
+  font-weight: 600
   margin: 0 0 0 55px !important
+  border-radius: 3px
 
-  .formErrorArrow
+  &, &::before
+    background: #fff
+    border: 1px solid #c8c7c3
+
+  &::before
+    content: ' '
     position: absolute
-    left: -11px
-    width: 0
-    height: 0
-    border-top: 8px solid transparent
-    border-bottom: 8px solid transparent
-    border-right: 10px solid rgba(0,0,0,0.7)
-    top: 11px
-    white-space: nowrap
+    +rotate(-135deg)
+    top: 17px
+    left: -7px
+    width: 12px
+    height: 12px
+    pointer-events: none
+    border-width: 1px 1px 0 0
