--- a/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridStandardsItem.jade
+++ b/Chalkable.Web/assets/jade/activities/grading/TeacherClassGradingGridStandardsItem.jade
@@ -1,19 +1,1 @@
-value = self.displayGrade(self.getGradeValue())
-.value=value
-if self.getComment()
-    .with-comment
-if self.isAbleEdit()
-    .edit-cell
-    +ActionForm('grading', 'updateStandardGradeFromGrid')
-        +Hidden('standardid', self.getStandardId())
-        +Hidden('gradeid', self.getGradeId())
-        +Hidden('classid', self.getClassId())
-        +Hidden('gradingperiodid', self.getGradingPeriodId())
-        +Hidden('comment', self.getComment())(
-            data-comment = self.getComment()
-        ).comment-value
-        +Hidden('studentid', self.getStudentId().valueOf())
-        input(value=value, name="gradevalue", data-value=value, class=(value ? "" : "empty-grade" )).grade-autocomplete.value-input
-        .grading-input-popup.chlk-pop-up-container.popup-bottom
-            .pop-up-triangle.big
-            +LabeledCheckbox(Msg.Fill, 'fill', false, (self.getGradeValue() === "" || self.getGradeValue() === null))(addCallBack = true, containerClass = "fill-grade-container").fill-grade
++TeacherClassStandardsGridSummaryCell(self.getModel(), true)
