--- a/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
+++ b/Chalkable.Web/assets/jade/activities/attendance/ClassListPage.jade
@@ -13,7 +13,7 @@ mixin SummaryInfo(presentCount, allStudentsCount)
     valuesEnum = chlk.models.attendance.AttendanceTypeEnum
     additionalParams = self.getAdditionalParams()
     if(self.hasLeftRightToolBar())
-        +LeftRightToolbar(topItems, chlk.templates.classes.TopBar, 'attendance', 'classList')(
+        +LeftRightToolbar(topItems, chlk.templates.attendance.TopBar, 'attendance', 'classListFromBar', [self.getDate().format('mm-dd-yy')])(
             selectedItemId=selectedId ? selectedId.valueOf() : "",
             disabledClass = 'x-hidden'
         ).classes-bar
