--- a/Chalkable.Web/assets/sass/partials/main/developer/_app.scss
+++ b/Chalkable.Web/assets/sass/partials/main/developer/_app.scss
@@ -342,6 +342,7 @@ BODY {
                       margin-top: -23px;
                       margin-left: -36px;
                       .myapps-permission{
+                        width: 320px;
                         padding-top: 25px;
                         margin-left: 225px;
                         display: inline-block;
@@ -372,7 +373,6 @@ BODY {
                           }
                         }
                         label{
-                          width: 121px;
                           text-align: left;
                           display: inline-block;
                           padding: 0;
@@ -384,14 +384,21 @@ BODY {
                         }
                         .app-name{
                           display: inline-block;
-                          width: 190px;
-                          max-width: 190px;
+                          max-width: 110px;
                           overflow: hidden;
                           text-overflow: ellipsis;
                           white-space: nowrap;
-                          margin-right: 5px;
                           vertical-align: top;
-                          margin-left: 2px;
+                          margin-left: 4px;
+                        }
+
+                        .my-apps{
+                          display: inline-block;
+                          overflow: hidden;
+                          text-overflow: ellipsis;
+                          vertical-align: top;
+                          margin-top: 0px;
+                          margin-left: 4px;
                         }
                       }
                     }
