--- a/Chalkable.Web/assets/jade/common/footers/developer-footer.jade
+++ b/Chalkable.Web/assets/jade/common/footers/developer-footer.jade
@@ -22,5 +22,6 @@ mixin DemoRoleButton(name, title, notReady)
 #roles-buttons
     +DemoRoleButton('Student')
     +DemoRoleButton('Teacher')
+    +DemoRoleButton('Admin', null, true).coming
     +DemoRoleButton('Parent', null, true).coming
     +DemoRoleButton('District', null, true).coming
