--- a/Chalkable.Web/assets/sass2/_shared.sass
+++ b/Chalkable.Web/assets/sass2/_shared.sass
@@ -22,6 +22,8 @@
 @import "2_atoms/search-input"
 @import "2_atoms/combo-box"
 @import "2_atoms/validation"
+@import "2_atoms/tooltip"
+@import "2_atoms/checkbox"
 
 @import "3_molecules/layout"
 @import "3_molecules/header"
@@ -34,6 +36,9 @@
 @import "3_molecules/loader-container"
 @import "3_molecules/calendar"
 @import "3_molecules/people-list"
+@import "3_molecules/select"
+@import "3_molecules/lr-toolbar"
+@import "3_molecules/grading-items"
 
 @import "6_popups/list-new-popup"
 
