--- a/Chalkable.Web/assets/sass2/teacher.sass
+++ b/Chalkable.Web/assets/sass2/teacher.sass
@@ -8,6 +8,7 @@
 @import "4_pages/announcement-form-page"
 @import "4_pages/app-market-page"
 @import "4_pages/my-apps-page"
+@import "4_pages/grading-grid"
 @import "4_pages/app-market-details"
 @import "4_pages/students-list"
 @import "4_pages/message-list-page"
